# habbit-sfu

backend/: .env  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: cd18e3a8b035_add_users_table.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/routes/: auth.py  health.py
backend/app/clients/: exceptions.py  moodle.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/domain/models/: __init__.py  users.py
backend/app/domain/schemas/: auth.py  health.py
backend/app/repositories/: users.py
backend/tests/: conftest.py
backend/tests/repositories/: test_user_repo.py
mobile/: App.jsx  metro.config.js  package-lock.json  package.json
mobile/src/components/: BottomNav.jsx  ScreenLayout.jsx
mobile/src/navigation/: AppNavigator.jsx  TabNavigator.jsx
mobile/src/screens/: CalendarScreen.jsx  FocusScreen.jsx  HabitsScreen.jsx  HomeScreen.jsx  ProfileScreen.jsx
mobile/src/screens/Auth/: LoginScreen.jsx
