[project]
name = "api"
version = "0.1.0"
description = "api"
authors = [
    {name = "Vladimir Tsyganov",email = "tsyganov.vv0228@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "uvicorn (>=0.43.0,<0.44.0)",
    "sqlalchemy[asyncsio] (>=2.0.49,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "greenlet (>=3.3.2,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
[tool.poetry]
packages = [{ include = "app"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
